# Ricoh_R1S

./: CMakeLists.txt  prj.conf
R1S_NRF/: R1S.bak  R1S.kicad_sym  R1S_NRF.bak  R1S_NRF.kicad_pcb  R1S_NRF.kicad_prl  R1S_NRF.kicad_pro  R1S_NRF.kicad_sch  R1S_NRF.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
R1S_NRF/R1S_NRF.pretty/: 0.66_Display.kicad_mod  0.91_Display.kicad_mod  2xPad.kicad_mod  ABLS7M2-16.000MHZ-D-2Y-T.kicad_mod  AP2112K-3.3TRG1.kicad_mod  APGF1012GBRC-07.kicad_mod  FL1200112.kicad_mod  IC_ADS114S08BIRHBT.kicad_mod  OSC_XRCGB32M000F1H01R0.kicad_mod  PQFN50P250X300X86-14N.kicad_mod  RP2040.kicad_mod  Ricoh_R1S_CN.kicad_mod  USON8.kicad_mod  VQFN-48-1EP_6x6mm_P0.4mm_EP4.1x4.1mm_ThermalVias.kicad_mod  XDCR_BH1750FVI-TR.kicad_mod
R1S_NRF/gerbers/: R1S_NRF-B_Cu.gbl  R1S_NRF-B_Mask.gbs  R1S_NRF-B_Paste.gbp  R1S_NRF-B_Silkscreen.gbo  R1S_NRF-Edge_Cuts.gm1  R1S_NRF-F_Cu.gtl  R1S_NRF-F_Mask.gts  R1S_NRF-F_Paste.gtp  R1S_NRF-F_Silkscreen.gto  R1S_NRF-NPTH.drl  R1S_NRF-PTH.drl  R1S_NRF-job.gbrjob
boards/: ricoh_r1s_mod.overlay
boards/arm/ricoh_r1s_mod/: Kconfig  Kconfig.board  Kconfig.defconfig  ricoh_r1s_mod-pinctrl.dtsi  ricoh_r1s_mod.dts  ricoh_r1s_mod.yaml  ricoh_r1s_mod_defconfig
src/: main.c
